--- a/src/assets/scss/components/_heading.scss
+++ b/src/assets/scss/components/_heading.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   margin: 40px 0 70px 0;
   text-align: center;
-  span {
+  span.main {
     color: $danger;
     font-size: 16px;
     display: inline-flex;
@@ -32,13 +32,23 @@
       background-color: $danger;
     }
   }
-  strong {
+  .sub {
     color: $primary;
     font-weight: bold;
     font-size: 36px;
     margin-bottom: 30px;
+    display: flex;
+    align-items: center;
     @include md {
       margin-bottom: 40px;
+    }
+    .error {
+      display: inline-block;
+      margin-left: 5px;
+      cursor: pointer;
+      opacity: 0.3;
+      animation: fade infinite alternate 0.7s 0.7s linear;
+      font-size: 30px;
     }
   }
   p {
