--- a/src/assets/scss/views/_home.scss
+++ b/src/assets/scss/views/_home.scss
@@ -144,19 +144,35 @@
     padding: 30px 30px 120px 30px;
     max-width: 1280px;
     margin: 0 auto;
-    .photo-list {
+    ul.photo-list {
       margin: 100px auto 0 auto;
       display: flex;
+      justify-content: center;
       flex-wrap: wrap;
+      gap: 10px;
       max-width: 800px;
+      width: 100%;
       li {
-        flex: 1;
-        min-width: 400px;
-      }
-      img {
-        object-fit: cover;
-        max-width: 400px;
+        position: relative;
+        background-position: center;
+        background-size: cover;
+        min-height: 300px;
         cursor: pointer;
+        width: 100%;
+        @include md {
+          max-width: 340px;
+          width: 100%;
+        }
+        &::after {
+          position: absolute;
+          content: "";
+          width: 100%;
+          height: 100%;
+          transition: all 0.3s ease;
+        }
+        &:hover::after {
+          background-color: rgba(255, 76, 41, 0.3);
+        }
       }
     }
   }
