--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -59,6 +59,9 @@ header {
         font-weight: bold;
         font-size: 20px;
         width: 100%;
+        &.router-link-exact-active {
+          color: $danger;
+        }
       }
     }
   }
