--- a/src/assets/scss/views/_home.scss
+++ b/src/assets/scss/views/_home.scss
@@ -58,7 +58,7 @@
           margin-bottom: 60px;
         }
       }
-      button {
+      a.link {
         cursor: pointer;
         display: inline-flex;
         outline: none;
